--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.0",
     "mysql2": "^3.14.1",
+    "openai": "^5.0.1",
+    "path": "^0.12.7",
     "sequelize": "^6.37.7"
   }
 }
