--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^3.14.1",
     "openai": "^5.0.1",
     "path": "^0.12.7",
-    "sequelize": "^6.37.7"
+    "sequelize": "^6.37.7",
+    "socket.io": "^4.8.1"
   }
 }
