--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io-client": "^4.8.1",
     "three": "^0.162.0",
     "zustand": "^4.5.2"
   },
