--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,22 @@
     "@react-three/drei": "^9.102.3",
     "@react-three/fiber": "^8.15.19",
     "axios": "^1.9.0",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.0.14",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.162.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
+    "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.162.0",
     "@vitejs/plugin-react": "^4.3.1",
